--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.18",
     "@ucanto/core": "^9.0.1",
     "@ucanto/principal": "^9.0.0",
+    "@web3-storage/access": "^18.1.0",
     "@web3-storage/w3up-client": "^12.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
