--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@hypercerts-org/sdk": "^1.0.3",
@@ -27,5 +28,15 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "@types/sinon": "^17.0.2",
+    "chai": "^5.0.0",
+    "chai-assertions-count": "^1.0.2",
+    "dotenv": "^16.3.1",
+    "multiformats": "^13.0.0",
+    "node-mocks-http": "^1.14.1",
+    "sinon": "^17.0.1",
+    "vitest": "^1.1.3"
   }
 }
