--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hypercerts-org/sdk": "^1.0.3",
     "@ipld/car": "^5.2.5",
+    "@openzeppelin/merkle-tree": "^1.0.5",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
@@ -19,12 +20,14 @@
     "@ucanto/principal": "^9.0.0",
     "@web3-storage/access": "^18.1.0",
     "@web3-storage/w3up-client": "^12.0.0",
+    "axios": "^1.6.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "viem": "^2.0.3"
   },
   "engines": {
     "node": "18.x"
