--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypercerts-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@hypercerts-org/sdk": "^1.0.3",
+    "@hypercerts-org/sdk": "^1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@types/node": "20.10.6",
