--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "hypercerts-api",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "pnpm codegen && nodemon src/index.ts",
+    "build": "pnpm codegen && npx tsc",
+    "start": "node dist/index.js",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
     "@hypercerts-org/sdk": "^1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
@@ -21,8 +26,11 @@
     "@web3-storage/access": "^18.1.0",
     "@web3-storage/w3up-client": "^12.0.0",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,13 +41,26 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/graphql-modules-preset": "^4.0.4",
+    "@graphql-codegen/introspection": "4.0.2",
+    "@graphql-codegen/typescript": "4.0.4",
+    "@graphql-codegen/typescript-document-nodes": "4.0.4",
+    "@graphql-codegen/typescript-resolvers": "4.0.4",
+    "@graphql-tools/executor-http": "^1.0.8",
+    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/stitch": "^9.0.3",
+    "@graphql-tools/wrap": "^10.0.1",
     "@types/sinon": "^17.0.2",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "dotenv": "^16.3.1",
+    "graphql-tools": "^9.0.0",
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
+    "nodemon": "^3.0.3",
     "sinon": "^17.0.1",
+    "ts-node": "^10.9.2",
     "vitest": "^1.1.3"
   }
 }
