--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npx tsc",
-    "start": "node -r dotenv/config src/index.js",
+    "build": "rimraf dist && rollup -c rollup.config.js",
+    "start": "node -r dotenv/config dist/index.js",
     "lint": "next lint",
     "test": "vitest"
   },
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
+    "rollup": "^4.12.0",
     "typescript": "5.3.3",
     "viem": "^2.0.3"
   },
@@ -47,6 +48,7 @@
     "@graphql-tools/schema": "^10.0.2",
     "@graphql-tools/stitch": "^9.0.3",
     "@graphql-tools/wrap": "^10.0.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/sinon": "^17.0.2",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
@@ -55,6 +57,7 @@
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
+    "rimraf": "^5.0.5",
     "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
