--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
+    "declaration": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -18,5 +18,6 @@
     "outDir": "./dist",
     "rootDirs": ["src"]
   },
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.json"],
   "exclude": ["node_modules"]
 }
