--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hypercerts-org/sdk": "^1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "20.10.6",
@@ -26,6 +27,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "express": "^4.18.2",
+    "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
     "rollup": "^4.12.0",
@@ -36,6 +38,7 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/graphql-modules-preset": "^4.0.4",
