--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
     "rollup": "^4.12.0",
+    "type-fest": "^4.12.0",
     "viem": "^2.0.3"
   },
   "engines": {
