--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "rimraf dist && rollup -c rollup.config.js",
-    "start": "node -r dotenv/config dist/index.js",
+    "dev": "nodemon",
+    "build": "rimraf dist && swc src --out-dir dist",
+    "start": "node -r dotenv/config dist/src/index.js",
     "lint": "next lint",
     "test": "vitest"
   },
   "dependencies": {
+    "@envelop/graphql-middleware": "^6.0.0",
+    "@graphql-tools/merge": "^9.0.3",
     "@hypercerts-org/sdk": "^1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
@@ -29,9 +31,15 @@
     "express": "^4.18.2",
     "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
+    "graphql-filter": "^1.1.5",
+    "graphql-middleware": "^6.1.35",
+    "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.1.1",
+    "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "tsyringe": "^4.8.0",
     "type-fest": "^4.12.0",
+    "type-graphql": "^2.0.0-beta.6",
     "viem": "^2.0.3"
   },
   "engines": {
@@ -40,12 +48,15 @@
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
+    "@graphql-codegen/cli": "^5.0.2",
     "@graphql-tools/delegate": "^10.0.3",
     "@graphql-tools/executor-http": "^1.0.8",
     "@graphql-tools/schema": "^10.0.2",
     "@graphql-tools/stitch": "^9.0.3",
     "@graphql-tools/wrap": "^10.0.1",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.15",
     "@types/sinon": "^17.0.2",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
