--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
+    "@graphql-yoga/plugin-response-cache": "^3.5.0",
     "@hypercerts-org/sdk": "^1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
+    "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.39.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
