--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@supabase/postgrest-js": "^1.15.2",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.42.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "20.10.6",
@@ -28,7 +28,6 @@
     "@web3-storage/w3up-client": "^12.0.0",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
-    "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "express": "^4.18.2",
     "gql.tada": "^1.2.1",
@@ -45,11 +44,12 @@
     "viem": "^2.0.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
+    "@eslint/js": "^9.0.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-tools/delegate": "^10.0.3",
     "@graphql-tools/executor-http": "^1.0.8",
@@ -63,7 +63,7 @@
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "dotenv": "^16.3.1",
-    "graphql-tools": "^9.0.0",
+    "eslint": "8.56.0",
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
@@ -73,6 +73,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
     "typescript": "5.3.3",
+    "typescript-eslint": "^7.7.0",
     "vitest": "^1.1.3"
-  }
+  },
+  "packageManager": "pnpm@9.0.4"
 }
