feat(filter): recursive filter resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "declaration": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "declaration": false,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
