--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf dist && swc src --out-dir dist",
     "start": "node -r dotenv/config dist/src/index.js",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@envelop/graphql-middleware": "^6.0.0",
@@ -50,7 +51,7 @@
     "@0no-co/graphqlsp": "^1.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
     "@eslint/js": "^9.0.0",
-    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/cli": "5.0.2",
     "@graphql-tools/delegate": "^10.0.3",
     "@graphql-tools/executor-http": "^1.0.8",
     "@graphql-tools/schema": "^10.0.2",
@@ -74,7 +75,10 @@
     "tsx": "^4.7.1",
     "typescript": "5.3.3",
     "typescript-eslint": "^7.7.0",
-    "vitest": "^1.1.3"
+    "vitest": "^1.1.3",
+    "@graphql-codegen/typescript": "4.0.6",
+    "@graphql-codegen/typescript-resolvers": "4.0.6",
+    "@graphql-codegen/introspection": "4.0.3"
   },
   "packageManager": "pnpm@9.0.4"
 }
