--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "rimraf dist && swc src --out-dir dist",
     "start": "node -r dotenv/config dist/src/index.js",
     "lint": "next lint",
-    "test": "vitest",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "test": "vitest"
   },
   "dependencies": {
     "@envelop/graphql-middleware": "^6.0.0",
@@ -75,10 +74,7 @@
     "tsx": "^4.7.1",
     "typescript": "5.3.3",
     "typescript-eslint": "^7.7.0",
-    "vitest": "^1.1.3",
-    "@graphql-codegen/typescript": "4.0.6",
-    "@graphql-codegen/typescript-resolvers": "4.0.6",
-    "@graphql-codegen/introspection": "4.0.3"
+    "vitest": "^1.1.3"
   },
-  "packageManager": "pnpm@9.0.4"
+  "packageManager": "pnpm@9.0.6"
 }
