--- a/.swcrc
+++ b/.swcrc
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
   "jsc": {
+    "experimental": { "keepImportAssertions": true },
     "parser": {
       "syntax": "typescript",
       "decorators": true,
