--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "build": "rimraf dist && swc src --out-dir dist",
+    "build": "rimraf dist && tsoa spec-and-routes && swc src --out-dir dist --copy-files",
     "start": "node -r dotenv/config dist/src/index.js",
-    "lint": "next lint",
+    "lint": "eslint",
     "test": "vitest"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.42.5",
+    "@tsoa/runtime": "^6.2.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "20.10.6",
@@ -27,6 +28,7 @@
     "@web3-storage/access": "^18.1.0",
     "@web3-storage/w3up-client": "^12.0.0",
     "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "eslint-config-next": "14.0.4",
     "express": "^4.18.2",
@@ -38,10 +40,13 @@
     "graphql-yoga": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
     "type-fest": "^4.12.0",
     "type-graphql": "^2.0.0-beta.6",
-    "viem": "^2.0.3"
+    "viem": "^2.0.3",
+    "zod": "^3.23.8"
   },
   "engines": {
     "node": "20.x"
@@ -59,9 +64,12 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
+    "@types/body-parser": "^1.19.5",
     "@types/sinon": "^17.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "eslint": "8.56.0",
     "multiformats": "^13.0.0",
