--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+//    "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
     "incremental": true,
     "outDir": "./dist",
