--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
-    "@hypercerts-org/sdk": "^1.4.2-alpha.0",
+    "@hypercerts-org/sdk": "1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@supabase/postgrest-js": "^1.15.2",
@@ -30,7 +30,6 @@
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "eslint-config-next": "14.0.4",
     "express": "^4.18.2",
     "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
