feat(sentry): init sentry setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@hypercerts-org/sdk": "1.4.2-alpha.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
+    "@sentry/integrations": "^7.114.0",
+    "@sentry/node": "^8.2.1",
+    "@sentry/profiling-node": "^8.2.1",
     "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.42.5",
     "@tsoa/runtime": "^6.2.1",
@@ -61,6 +64,7 @@
     "@graphql-tools/stitch": "^9.0.3",
     "@graphql-tools/wrap": "^10.0.1",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@sentry/types": "^8.2.1",
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
     "@types/body-parser": "^1.19.5",
