(feat): add supabase migrations from hyperboards

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sentry/integrations": "^7.114.0",
     "@sentry/node": "^8.2.1",
     "@sentry/profiling-node": "^8.2.1",
+    "@snaplet/seed": "^0.97.20",
     "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.42.5",
     "@tsoa/runtime": "^6.2.1",
@@ -42,6 +43,7 @@
     "graphql-yoga": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "supabase": "^1.172.2",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
