--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,9 @@ PROOF=
 
 SUPABASE_CACHING_DB_URL=
 SUPABASE_CACHING_ANON_API_KEY=
+
+SUPABASE_DATA_DB_URL=
+SUPABASE_DATA_ANON_API_KEY=
+SUPABASE_DATA_SERVICE_API_KEY=
+
+SENTRY_DSN=
