--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,4 +1,4 @@
-name: Deploy Migrations to Staging
+name: Deploy Migrations to staging
 
 on:
   push:
@@ -6,15 +6,15 @@ on:
       - develop
   workflow_dispatch:
 
+env:
+  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+  SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
+  SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
-
+    environment: staging
     steps:
       - uses: actions/checkout@v3
 
