Marketplace API endpoints (#62)
* (feat): add supabase migrations from hyperboards

* (feat): add supabase migrations from hyperboards

* (feat): add supabase migrations for marketplace orders and order_nonces

* (feat): add marketplace endpoints

* (feat): bump sdk version and implement token owner checking logic

* (chore): add ci scripts

* (feat): fix POST /marketplace/order-nonce endpoint

* (chore): fix env template file

* (chore): update dependencies

* (fix): pr feedback, implement prettier

* (fix): lowercase contract address comparison issues, return zod errors from endpoint

--- a/.env.template
+++ b/.env.template
@@ -2,5 +2,11 @@ PORT=4000
 KEY=
 PROOF=
 
-SUPABASE_DB_URL=
-SUPABASE_ANON_API_KEY=
+SUPABASE_CACHING_DB_URL=
+SUPABASE_CACHING_ANON_API_KEY=
+
+SUPABASE_DATA_DB_URL=
+SUPABASE_DATA_ANON_API_KEY=
+SUPABASE_DATA_SERVICE_API_KEY=
+
+SENTRY_DSN=
