--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "build": "rimraf dist && tsoa spec-and-routes && swc src --out-dir dist --copy-files",
     "start": "node -r dotenv/config dist/src/index.js",
+    "supabase:types": "supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "lint": "eslint",
     "test": "vitest"
   },
@@ -14,12 +15,14 @@
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
-    "@hypercerts-org/sdk": "1.4.2-alpha.0",
+    "@hypercerts-org/marketplace-sdk":  "0.2.0",
+    "@hypercerts-org/sdk": "2.0.0-alpha.11",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@sentry/integrations": "^7.114.0",
     "@sentry/node": "^8.2.1",
     "@sentry/profiling-node": "^8.2.1",
+    "@snaplet/seed": "^0.97.20",
     "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.42.5",
     "@tsoa/runtime": "^6.2.1",
@@ -33,6 +36,7 @@
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "ethers": "^6.12.2",
     "express": "^4.18.2",
     "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
@@ -42,6 +46,7 @@
     "graphql-yoga": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "supabase": "^1.172.2",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
