--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "nodemon",
     "build": "rimraf dist && tsoa spec-and-routes && swc src --out-dir dist --copy-files",
     "start": "node -r dotenv/config dist/src/index.js",
-    "supabase:types": "supabase gen types typescript --local > ./src/types/supabaseData.ts",
+    "supabase:reset:all": "concurrently \"npm run supabase:reset:data\" \"npm run supabase:reset:cache\"",
+    "supabase:start:all": "concurrently \"npm run supabase:start:data\" \"npm run supabase:start:cache\"",
+    "supabase:types:all": "concurrently \"npm run supabase:types:data\" \"npm run supabase:types:cache\"",
+    "supabase:reset:cache": "supabase db reset --workdir ./lib/hypercerts-indexer",
+    "supabase:reset:data": "supabase db reset --workdir ./",
+    "supabase:start:cache": "supabase start --workdir ./lib/hypercerts-indexer",
+    "supabase:start:data": "supabase start",
+    "supabase:types:cache": "supabase gen types typescript --local --workdir ./lib/hypercerts-indexer > ./src/types/supabaseCaching.ts",
+    "supabase:types:data": "supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "lint": "eslint",
     "test": "vitest"
   },
