--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "nodemon",
     "build": "rimraf dist && tsoa spec-and-routes && swc src --out-dir dist --copy-files",
     "start": "node -r dotenv/config dist/src/index.js",
-    "integration": "concurrently \"pnpm --dir ./lib/hypercerts-indexer run dev\" \"pnpm run dev\"",
-    "supabase:reset:all": "concurrently \"npm run supabase:reset:data\" \"npm run supabase:reset:cache\"",
-    "supabase:start:all": "concurrently \"npm run supabase:start:data\" \"npm run supabase:start:cache\"",
-    "supabase:types:all": "concurrently \"npm run supabase:types:data\" \"npm run supabase:types:cache\"",
+    "integration": "concurrently -c \"green,blue\" --names \"CACHE,DATA\"  \"pnpm --dir ./lib/hypercerts-indexer run dev\" \"pnpm run dev\"",
+    "supabase:reset:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:reset:data\" \"npm run supabase:reset:cache\"",
+    "supabase:start:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:start:data\" \"npm run supabase:start:cache\"",
+    "supabase:types:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:types:data\" \"npm run supabase:types:cache\"",
     "supabase:reset:cache": "supabase db reset --workdir ./lib/hypercerts-indexer",
     "supabase:reset:data": "supabase db reset --workdir ./",
     "supabase:start:cache": "supabase start --workdir ./lib/hypercerts-indexer",
