--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,7 +9,7 @@ on:
 env:
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
   SUPABASE_DB_PASSWORD: ${{ secrets.PRODUCTION_DB_PASSWORD }}
-  SUPABASE_PROJECT_ID: ${{ secrets.PRODUCTION_PROJECT_ID }}
+  SUPABASE_PROJECT_ID: ${{ vars.PRODUCTION_PROJECT_ID }}
 
 jobs:
   deploy:
