--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -9,7 +9,7 @@ on:
 env:
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
   SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
-  SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
+  SUPABASE_PROJECT_ID: ${{ vars.STAGING_PROJECT_ID }}
 
 jobs:
   deploy:
