--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "supabase:types:data": "supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "preintegration": "pnpm --dir ./lib/hypercerts-indexer i",
     "lint": "eslint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
-    "@hypercerts-org/marketplace-sdk":  "0.2.0",
+    "@hypercerts-org/marketplace-sdk": "0.2.0",
     "@hypercerts-org/sdk": "2.0.0-alpha.11",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
@@ -85,6 +86,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/sinon": "^17.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@vitest/coverage-v8": "^1.6.0",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "concurrently": "^8.2.2",
@@ -100,7 +102,8 @@
     "tsx": "^4.7.1",
     "typescript": "5.3.3",
     "typescript-eslint": "^7.7.0",
-    "vitest": "^1.1.3"
+    "vitest": "^1.3.1",
+    "vitest-mock-extended": "^1.3.1"
   },
   "packageManager": "pnpm@9.0.6"
 }
