--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@0no-co/graphqlsp": "^1.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
     "@eslint/js": "^9.0.0",
+    "@faker-js/faker": "^8.4.1",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-tools/delegate": "^10.0.3",
     "@graphql-tools/executor-http": "^1.0.8",
