--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
-    "@hypercerts-org/marketplace-sdk":  "0.3.5",
-    "@hypercerts-org/sdk": "2.0.0-alpha.20",
+    "@hypercerts-org/marketplace-sdk": "0.3.5",
+    "@hypercerts-org/sdk": "2.0.0-alpha.24",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@sentry/integrations": "^7.114.0",
@@ -41,6 +41,7 @@
     "@types/node": "20.10.6",
     "@ucanto/core": "^9.0.1",
     "@ucanto/principal": "^9.0.0",
+    "@urql/core": "^5.0.4",
     "@web3-storage/access": "^18.1.0",
     "@web3-storage/w3up-client": "^12.0.0",
     "axios": "^1.6.5",
