--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
+    "prettier": "3.3.2",
     "rimraf": "^5.0.5",
     "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
