fix(type): sales bigint fields as EthBigInt

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "lib/hypercerts-indexer"]
 	path = lib/hypercerts-indexer
 	url = https://github.com/hypercerts-org/hypercerts-indexer
+    branch = develop
