--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "supabase:reset:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:reset:data\" \"npm run supabase:reset:cache\"",
     "supabase:start:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:start:data\" \"npm run supabase:start:cache\"",
     "supabase:types:all": "concurrently -c \"blue,green\" --names \"DATA,CACHE\" \"npm run supabase:types:data\" \"npm run supabase:types:cache\"",
-    "supabase:reset:cache": "supabase db reset --workdir ./lib/hypercerts-indexer",
-    "supabase:reset:data": "supabase db reset --workdir ./",
-    "supabase:start:cache": "supabase start --workdir ./lib/hypercerts-indexer",
-    "supabase:start:data": "supabase start",
-    "supabase:types:cache": "supabase gen types typescript --local --workdir ./lib/hypercerts-indexer > ./src/types/supabaseCaching.ts",
-    "supabase:types:data": "supabase gen types typescript --local > ./src/types/supabaseData.ts",
+    "supabase:reset:cache": "npx supabase db reset --workdir ./lib/hypercerts-indexer",
+    "supabase:reset:data": "npx supabase db reset --workdir ./",
+    "supabase:start:cache": "npx supabase start --workdir ./lib/hypercerts-indexer",
+    "supabase:start:data": "npx supabase start",
+    "supabase:types:cache": "npx supabase gen types typescript --local --workdir ./lib/hypercerts-indexer > ./src/types/supabaseCaching.ts",
+    "supabase:types:data": "npx supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "preintegration": "pnpm --dir ./lib/hypercerts-indexer i",
     "lint": "eslint",
     "test": "vitest"
@@ -56,7 +56,6 @@
     "graphql-yoga": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
-    "supabase": "^1.172.2",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
