--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,11 @@
     "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-//    "verbatimModuleSyntax": true,
+    //    "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
     "incremental": true,
     "outDir": "./dist",
-    "rootDirs": [
-      "src"
-    ],
+    "rootDirs": ["src"],
     "plugins": [
       {
         "name": "@0no-co/graphqlsp",
@@ -27,14 +25,8 @@
       }
     ]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.json"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.json"],
+  "exclude": ["node_modules"],
   "ts-node": {
     "swc": true
   }
