--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tsoa/runtime": "^6.2.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "20.10.6",
     "@ucanto/core": "^9.0.1",
     "@ucanto/principal": "^9.0.0",
@@ -54,6 +55,7 @@
     "graphql-middleware": "^6.1.35",
     "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.1.1",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
     "swagger-ui-express": "^5.0.0",
