--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "@ucanto/core": "^9.0.1",
     "@ucanto/principal": "^9.0.0",
     "@urql/core": "^5.0.4",
-    "@web3-storage/access": "^18.1.0",
-    "@web3-storage/w3up-client": "^12.0.0",
+    "@web3-storage/access": "^20.0.0",
+    "@web3-storage/w3up-client": "^15.0.0",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "ethers": "^6.12.2",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
     "graphql-filter": "^1.1.5",
@@ -103,6 +103,11 @@
     "typescript": "5.5.3",
     "typescript-eslint": "^7.7.0",
     "vitest": "^1.1.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "one-webcrypto": "1.0.3"
+    }
   },
   "packageManager": "pnpm@9.0.6"
 }
