--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
+    "typedoc": "^0.26.5",
     "typescript": "5.5.3",
     "typescript-eslint": "^7.7.0",
     "vitest": "^1.1.3"
