--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "supabase": "1.187.10",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
