--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.1.1",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
     "supabase": "1.187.10",
