--- a/package.json
+++ b/package.json
@@ -55,16 +55,17 @@
     "graphql-middleware": "^6.1.35",
     "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.1.1",
+    "kysely": "^0.27.4",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.0",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
-    "supabase": "1.187.10",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
     "type-fest": "^4.12.0",
-    "type-graphql": "^2.0.0-beta.6",
+    "type-graphql": "^2.0.0-rc.2",
     "viem": "^2.0.3",
     "zod": "^3.23.8"
   },
@@ -86,6 +87,7 @@
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
     "@types/body-parser": "^1.19.5",
+    "@types/pg": "^8.11.6",
     "@types/sinon": "^17.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "chai": "^5.0.0",
@@ -93,12 +95,14 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "eslint": "8.56.0",
+    "kysely-supabase": "^0.2.0",
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
     "prettier": "3.3.2",
     "rimraf": "^5.0.5",
     "sinon": "^17.0.1",
+    "supabase": "1.187.10",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
