feat(sort): sort by attestations and add commit lint

--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "supabase:types:data": "npx supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "preintegration": "pnpm --dir ./lib/hypercerts-indexer i",
     "lint": "eslint",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky",
+    "commitlint": "commitlint --config commitlintrc.ts --edit"
   },
   "dependencies": {
     "@envelop/graphql-middleware": "^6.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
     "@hypercerts-org/marketplace-sdk": "0.3.32",
-    "@hypercerts-org/sdk": "2.0.0-alpha.37",
+    "@hypercerts-org/sdk": "2.1.1",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@sentry/integrations": "^7.114.0",
@@ -74,6 +76,8 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.4.1",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@eddeee888/gcg-typescript-resolver-files": "^0.7.2",
     "@eslint/js": "^9.0.0",
     "@graphql-codegen/cli": "5.0.2",
@@ -95,14 +99,16 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "eslint": "8.56.0",
+    "husky": "^9.1.5",
     "kysely-supabase": "^0.2.0",
+    "lint-staged": "^15.2.9",
     "multiformats": "^13.0.0",
     "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
     "prettier": "3.3.2",
     "rimraf": "^5.0.5",
     "sinon": "^17.0.1",
-    "supabase": "1.187.10",
+    "supabase": "^1.191.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
