--- a/package.json
+++ b/package.json
@@ -117,5 +117,13 @@
     "typescript-eslint": "^7.7.0",
     "vitest": "^1.1.3"
   },
+  "lint-staged": {
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write --ignore-unknown"
+    ]
+  },
   "packageManager": "pnpm@9.0.6"
 }
