--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "dependencies": {
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
-    "@hypercerts-org/contracts": "2.0.0-alpha.10",
-    "@hypercerts-org/marketplace-sdk": "0.3.36",
-    "@hypercerts-org/sdk": "2.3.0-beta.1",
+    "@hypercerts-org/contracts": "2.0.0-alpha.11",
+    "@hypercerts-org/marketplace-sdk": "0.3.37",
+    "@hypercerts-org/sdk": "2.3.0",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@sentry/integrations": "^7.114.0",
