--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "kysely": "^0.27.4",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.0",
+    "node-cron": "^3.0.3",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
@@ -93,6 +94,7 @@
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
     "@types/body-parser": "^1.19.5",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.6",
     "@types/sinon": "^17.0.2",
     "@types/swagger-ui-express": "^4.1.6",
