--- a/package.json
+++ b/package.json
@@ -119,7 +119,9 @@
     "typedoc": "^0.26.5",
     "typescript": "5.5.3",
     "typescript-eslint": "^7.7.0",
-    "vitest": "^1.1.3"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^1.1.3",
+    "vitest-mock-extended": "^2.0.2"
   },
   "lint-staged": {
     "*.{mjx,cjs,js,jsx,ts,tsx}": [
