--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preintegration": "pnpm --dir ./lib/hypercerts-indexer i",
     "lint": "eslint",
     "test": "vitest",
+    "test:coverage": "vitest --coverage.enabled true",
     "prepare": "husky",
     "commitlint": "commitlint --config commitlintrc.ts --edit"
   },
@@ -98,6 +99,7 @@
     "@types/pg": "^8.11.6",
     "@types/sinon": "^17.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@vitest/coverage-v8": "^2.1.8",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "concurrently": "^8.2.2",
@@ -120,7 +122,7 @@
     "typescript": "5.5.3",
     "typescript-eslint": "^7.7.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^1.1.3",
+    "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
   },
   "lint-staged": {
