fix(gha): alchemy api key in gh ci test env
updates gha test script to use env var

--- a/.github/workflows/ci-test-unit.yml
+++ b/.github/workflows/ci-test-unit.yml
@@ -16,7 +16,7 @@ jobs:
       KEY: "test"
       PROOF: "test"
 
-      ALCHEMY_API_KEY: "test"
+      ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
       DRPC_API_KEY: "test"
       INFURA_API_KEY: "test"
 
