feat(upload.ts): add file validations
Add validations on file type and size

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cors": "^2.8.5",
     "ethers": "^6.12.2",
     "express": "^4.19.2",
+    "file-type": "^19.6.0",
     "gql.tada": "^1.2.1",
     "graphql": "^16.8.1",
     "graphql-filter": "^1.1.5",
@@ -63,6 +64,7 @@
     "kysely": "^0.27.4",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.0",
+    "mime-types": "^2.1.35",
     "multer": "1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.12.0",
@@ -96,6 +98,7 @@
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
     "@types/body-parser": "^1.19.5",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.6",
