feat: blueprint batch minting form
- Introduced a new script for batch minting blueprints from a CSV file
- Added a new CSV file to define example blueprint data.
- Updated `package.json` to include new dependencies: `@inquirer/prompts` and `csv-parse`.
- Modified `BlueprintController` to make the `cardImage` field optional in validation.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "supabase:types:data": "npx supabase gen types typescript --local > ./src/types/supabaseData.ts",
     "preintegration": "pnpm --dir ./lib/hypercerts-indexer i",
     "lint": "eslint",
+    "scripts:blueprint-batch-mint": "tsx scripts/blueprint_batch_mint.ts",
     "test": "vitest",
     "test:coverage": "vitest --coverage.enabled true",
     "prepare": "husky",
@@ -90,6 +91,7 @@
     "@graphql-tools/schema": "^10.0.2",
     "@graphql-tools/stitch": "^9.0.3",
     "@graphql-tools/wrap": "^10.0.1",
+    "@inquirer/prompts": "^7.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@sentry/types": "^8.2.1",
     "@swc/cli": "^0.3.12",
@@ -103,6 +105,7 @@
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "concurrently": "^8.2.2",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.3.1",
     "eslint": "8.56.0",
     "husky": "^9.1.5",
