fix(services): refactor db services and query building
To improve the maintainability, readabiity and testability of the API
codebase some major refactors were implemented.

The BaseSupabaseService is executes different strategies and applies
where filtering and sorting.

Query Strategies and Factory were created for clear declaration of
querying strategies

Tests were updated and basic tests for the services created. Including
getting the graphql tests running with vitest

--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "@sentry/types": "^8.2.1",
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.4.15",
+    "@swc/helpers": "^0.5.15",
+    "@swc/jest": "^0.2.37",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/body-parser": "^1.19.5",
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
@@ -107,6 +110,7 @@
     "@types/sinon": "^17.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@vitest/coverage-v8": "^2.1.8",
+    "better-sqlite3": "^11.8.1",
     "chai": "^5.0.0",
     "chai-assertions-count": "^1.0.2",
     "concurrently": "^8.2.2",
@@ -129,6 +133,7 @@
     "typedoc": "^0.26.5",
     "typescript": "5.5.3",
     "typescript-eslint": "^7.7.0",
+    "unplugin-swc": "^1.5.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
