--- a/.github/workflows/ci-test-unit.yml
+++ b/.github/workflows/ci-test-unit.yml
@@ -19,6 +19,7 @@ jobs:
       ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
       DRPC_API_KEY: "test"
       INFURA_API_KEY: "test"
+      FILECOIN_API_KEY: "test"
 
       INDEXER_ENVIRONMENT: "test"
 
