--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@graphql-yoga/plugin-response-cache": "^3.5.0",
     "@hypercerts-org/contracts": "2.0.0-alpha.11",
     "@hypercerts-org/marketplace-sdk": "0.3.37",
-    "@hypercerts-org/sdk": "2.3.0",
+    "@hypercerts-org/sdk": "2.5.0-beta.2",
     "@ipld/car": "^5.2.5",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@safe-global/api-kit": "^2.5.4",
