--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "lru-cache": "^11.0.0",
     "mime-types": "^2.1.35",
     "multer": "1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.12.0",
+    "sharp": "^0.33.5",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1",
     "tsyringe": "^4.8.0",
