chore(lib): migrated db lib tools from graphql to db dir
Migrated the following db related method the to appropriate lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,7 @@
       }
     ]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.json",
-    "test/lib/graphql/typeRegistry.test.ts"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.json"],
   "exclude": ["node_modules"],
   "ts-node": {
     "swc": true
