feat(attestation): implement comprehensive attestation resolver and services
Introduced a robust implementation for attestation-related functionality:
- Migrated attestation resolver to services directory for better code organization
- Enhanced HypercertPointer schema validation with improved type handling
- Added comprehensive test coverage for AttestationResolver, AttestationEntityService, and AttestationQueryStrategy
- Implemented advanced parsing and validation for attestation data
- Improved hypercert ID generation with flexible input handling
- Added detailed documentation for resolver methods and services

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "commitlint": "commitlint --config commitlintrc.ts --edit"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@graphql-tools/merge": "^9.0.19",
     "@graphql-yoga/plugin-response-cache": "^3.13.0",
     "@hypercerts-org/contracts": "2.0.0-alpha.12",
