feat(order): add order resolver and enhance marketplace order services
- Implements and polishes marketplace order entities handlers.
- Enhanced MarketplaceOrdersService with comprehensive documentation and new methods for order management
- Updated test coverage for OrderResolver and MarketplaceOrdersService, including error handling and mock data generation
- Introduced new utility functions for generating mock orders and collections

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@web3-storage/w3up-client": "^16.0.0",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "ethers": "^6.12.2",
     "express": "^4.19.2",
     "file-type": "^19.6.0",
