fix(build): cleanup dependencies and generated files
- removes __generated__ from src code
- added /src/__generated/ to .gitignore
- removes unused dependencies found with npx depcheck

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# generated graphql files
-src/generated/
-
 dist
 .rollup.cache
 .idea
+
+# generated swagger files
+src/__generated__/
